--- a/MyBlog.UI/Areas/Admin/Views/Shared/Components/Message/Default.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Shared/Components/Message/Default.cshtml
@@ -40,7 +40,7 @@
         }
 
 
-        <a href="/Admin/Contact" class="dropdown-item text-center">Tüm Mesajları Gör</a>
+        <a href="/admin/mesajlar" class="dropdown-item text-center">Tüm Mesajları Gör</a>
 
     </div>
 </div>
