Js kısmındaki hatalar giderildi.Session süresi ayarlandı süre dolduğunda tekrar logine yönlendirildi.Api Metodlarına Authorize eklendi

--- a/MyBlog.UI/Areas/Admin/Views/Shared/Components/Message/Default.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Shared/Components/Message/Default.cshtml
@@ -15,7 +15,7 @@
         {
             if (item.IsRead == false)
             {
-                <a class="dropdown-item" id="guncelle1" onclick="Update1('@item.Id','@item.Name','@item.Mail','@item.Subject','@item.Message','@item.Date')" style="cursor:pointer;">
+                <a class="dropdown-item" id="guncelle1" onclick="CUpdate('@item.Id','@item.Name','@item.Mail','@item.Subject','@item.Message','@item.Date')" style="cursor:pointer;">
                     <div class="d-flex align-items-center">
                         <i class="fa fa-envelope me-lg-2"></i>
                         <div class="ms-2">
