--- a/MyBlog.UI/Views/Shared/Components/Portfolio/Default.cshtml
+++ b/MyBlog.UI/Views/Shared/Components/Portfolio/Default.cshtml
@@ -64,7 +64,7 @@
 
                         <div class="description-box">
                             <h4>@item.Name</h4>
-                            <p>@item.Description</p>
+                            <p>@Html.Raw(@item.Description)</p>
                         </div>
 
                         <div class="link-box">
