--- a/MyBlog.UI/Areas/Admin/Views/Portfolio/Portfolio.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Portfolio/Portfolio.cshtml
@@ -19,28 +19,28 @@
                         <h1 class="modal-title fs-5" id="staticBackdropLabel"></h1>
                         <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal" aria-label="Close">X</button>
                     </div>
-                    <input name="Id" type="text" class="form-control" id="Id" hidden="hidden">
+                    <input name="Id" type="text" class="form-control" id="PId" hidden="hidden">
                     <div class=" bg-secondary modal-body">
                         <div class="form-floating mb-3 d-flex justify-content-center">
-                            <img style="height:150px; width:150px; border-radius:50%;" src="~/images/portfolio/" id="Image1" alt="Profil Resmi">
-                            <input autocomplete="off" name="Image" type="text" class="form-control" id="Image" hidden="hidden" >
+                            <img style="height:150px; width:150px; border-radius:50%;" src="~/images/portfolio/" id="PImage1" alt="Profil Resmi">
+                            <input autocomplete="off" name="Image" type="text" class="form-control" id="PImage" hidden="hidden" >
 
                         </div>
                         <div class="form-floating mb-3 ">
-                            <input autocomplete="off" name="Name" type="text" class="form-control" id="Name1" placeholder="İsim" required>
+                            <input autocomplete="off" name="Name" type="text" class="form-control" id="PName" placeholder="İsim" required>
                             <label for="floatingInput">İsim</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <textarea autocomplete="off" name="Description" class="form-control" placeholder="Proje Açıklaması" id="Description1" required style="height: 150px;"></textarea>
+                            <textarea autocomplete="off" name="Description" class="form-control" placeholder="Proje Açıklaması" id="PDescription" required style="height: 150px;"></textarea>
                             <label for="floatingTextarea">Açıklama</label>
                         </div>
                         <div class="form-floating mb-3 ">
-                            <input autocomplete="off" name="Url" type="text" class="form-control" id="Url1" placeholder="Link" required>
+                            <input autocomplete="off" name="Url" type="text" class="form-control" id="PUrl" placeholder="Link" required>
                             <label for="floatingInput">Link</label>
                         </div>
                         <div class="mb-3">
                             <label for="formFileSm" class="form-label">Proje Resmi Seç</label>
-                            <input name="Image" id="Image2" class="form-control bg-dark" type="file" accept="image/*">
+                            <input name="Image" id="PImage2" class="form-control bg-dark" type="file" accept="image/*">
                         </div>
                     </div>
                     <div class="modal-footer bg-secondary">
@@ -70,10 +70,11 @@
                 <tr id="@item.Id">
                     <td>@item.Name</td>
                     <td>@item.Description</td>
-                    <td>@item.Url</td>
+                    <td><a target="blank" href="@item.Url">@item.Url</a></td>
                     <td><img height="40" width="40" src="~/images/portfolio/@item.Image" /></td>
                     <td>
                         <button type="button" class="btn btn-outline-info m-2" data-bs-toggle="modal" id="guncelle" onclick="Update('@item.Id','@item.Name','@item.Description','@item.Url','@item.Image')">Güncelle</button>
+
                     </td>
                     <td><button type="button" id="delete" onclick="confirmDelete(@item.Id)" class="btn btn-outline-danger m-2">Sil</button></td>
                 </tr>
