--- a/MyBlog.UI/Views/Shared/_Layout.cshtml
+++ b/MyBlog.UI/Views/Shared/_Layout.cshtml
@@ -14,21 +14,21 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet" asp-append-version="true">>
 
     <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" asp-append-version="true">>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" asp-append-version="true">>
 
     <!-- Libraries Stylesheet -->
-    <link href="admin/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="admin/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="admin/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" asp-append-version="true">>
+    <link href="admin/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" asp-append-version="true"> />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="admin/css/bootstrap.min.css" rel="stylesheet">
+    <link href="admin/css/bootstrap.min.css" rel="stylesheet" asp-append-version="true">>
 
     <!-- Template Stylesheet -->
-    <link href="admin/css/style.css" rel="stylesheet">
+    <link href="admin/css/style.css" rel="stylesheet" asp-append-version="true">>
 </head>
 
 <body>
@@ -206,15 +206,15 @@
     </div>
 
     <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="admin/lib/chart/chart.min.js"></script>
-    <script src="admin/lib/easing/easing.min.js"></script>
-    <script src="admin/lib/waypoints/waypoints.min.js"></script>
-    <script src="admin/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="admin/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="admin/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="admin/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" asp-append-version="true">></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" asp-append-version="true">></script>
+    <script src="admin/lib/chart/chart.min.js" asp-append-version="true">></script>
+    <script src="admin/lib/easing/easing.min.js" asp-append-version="true">></script>
+    <script src="admin/lib/waypoints/waypoints.min.js" asp-append-version="true">></script>
+    <script src="admin/lib/owlcarousel/owl.carousel.min.js" asp-append-version="true">></script>
+    <script src="admin/lib/tempusdominus/js/moment.min.js" asp-append-version="true">></script>
+    <script src="admin/lib/tempusdominus/js/moment-timezone.min.js" asp-append-version="true">></script>
+    <script src="admin/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js" asp-append-version="true">></script>
 
     <!-- Template Javascript -->
     <script src="admin/js/main.js"></script>
