contact dönüş css düzenlendi contact js de silmeyi engelleyen kısım düzeltildi

--- a/MyBlog.UI/Views/Home/Contact.cshtml
+++ b/MyBlog.UI/Views/Home/Contact.cshtml
@@ -30,7 +30,7 @@
 						<input name="contactSubject" type="text" id="Subject" placeholder="Konu" value="">
 					</div>
 					<div class="form-field">
-						<textarea name="contactMessage" id="Message" placeholder="Mesaj" rows="10" cols="50" required></textarea>
+						<textarea name="contactMessage" style="color:black !important;" id="Message" placeholder="Mesaj" rows="10" cols="50" required></textarea>
 					</div>
 					<div class="form-field">
 						<button id="update1" class="submitform">Gönder</button>
