--- a/MyBlog.UI/Views/Shared/Components/About/Default.cshtml
+++ b/MyBlog.UI/Views/Shared/Components/About/Default.cshtml
@@ -52,7 +52,7 @@
 			{
 				<ul class="skill-bars">
 					<li>
-						<div class="progress percent@{@item.Percentile}"><span>@item.Percentile%</span></div>
+						<div class="progress percent@{@item.Percentile}"></div>
 						<strong>@item.Name</strong>
 					</li>
 				</ul> <!-- /skill-bars -->
