--- a/MyBlog.UI/Areas/Admin/Views/Contact/Contact.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Contact/Contact.cshtml
@@ -49,7 +49,7 @@
 
                                         <td class="d-flex justify-content-end">
                                             <button type="button" class="btn btn-outline-info m-2" data-bs-toggle="modal" onclick="CUpdate('@item.Id','@item.Name','@item.Mail','@item.Subject','@item.Message','@item.Date')">Detay</button>
-                                            <button type="button" id="delete" onclick="confirmDelete(@item.Id)" class="btn btn-outline-danger m-2">Sil</button>
+                                            <button type="button" id="delete" onclick="confirmDelete1 (@item.Id)" class="btn btn-outline-danger m-2">Sil</button>
                                         </td>
                                     </tr>
                                 }
