js ler düzenlendi

--- a/MyBlog.UI/Areas/Admin/Views/Portfolio/Portfolio.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Portfolio/Portfolio.cshtml
@@ -27,15 +27,15 @@
 
                         </div>
                         <div class="form-floating mb-3 ">
-                            <input autocomplete="off" name="Name" type="text" class="form-control" id="PName" placeholder="İsim" required>
+                            <input autocomplete="off" name="Name" type="text" class="form-control" id="PName" placeholder="İsim" portfoliorequired>
                             <label for="floatingInput">İsim</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <textarea autocomplete="off" name="Description" class="form-control" placeholder="Proje Açıklaması" id="PDescription" required style="height: 150px;"></textarea>
+                            <textarea autocomplete="off" name="Description" class="form-control" placeholder="Proje Açıklaması" id="PDescription" portfoliorequired style="height: 150px;"></textarea>
                             <label for="floatingTextarea">Açıklama</label>
                         </div>
                         <div class="form-floating mb-3 ">
-                            <input autocomplete="off" name="Url" type="text" class="form-control" id="PUrl" placeholder="Link" required>
+                            <input autocomplete="off" name="Url" type="text" class="form-control" id="PUrl" placeholder="Link" portfoliorequired>
                             <label for="floatingInput">Link</label>
                         </div>
                         <div class="mb-3">
