--- a/MyBlog.UI/Areas/Admin/Views/Skills/Skills.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Skills/Skills.cshtml
@@ -25,11 +25,11 @@
                         <input hidden name="Id" type="text" class="form-control" id="Id19">
                             <input autocomplete="off" name="Image" type="text" class="form-control" id="Image" hidden="hidden">
                         <div class="form-floating mb-3 ">
-                            <input autocomplete="off" name="Name" type="text" class="form-control" id="Name19" placeholder="İsim" required>
+                            <input autocomplete="off" name="Name" type="text" class="form-control" id="Name19" placeholder="İsim" skillsrequired>
                             <label for="floatingInput">İsim</label>
                         </div>
                         <div class="form-floating mb-3 ">
-                            <input autocomplete="off" name="Percentile" type="text" class="form-control" id="Percentile" placeholder="Yüzde" required>
+                            <input autocomplete="off" name="Percentile" type="text" class="form-control" id="Percentile" placeholder="Yüzde" skillsrequired>
                             <label for="floatingInput">Yüzde</label>
                         </div>                       
                     </div>
