--- a/MyBlog.UI/Areas/Admin/Views/Social/Social.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Social/Social.cshtml
@@ -28,11 +28,11 @@
 
                         </div>
                         <div class="form-floating mb-3 ">
-                            <input autocomplete="off" name="Name" type="text" class="form-control" id="Name18" placeholder="İsim" required>
+                            <input autocomplete="off" name="Name" type="text" class="form-control" id="Name18" placeholder="İsim" socialrequired>
                             <label for="floatingInput">İsim</label>
                         </div>                       
                         <div class="form-floating mb-3 ">
-                            <input autocomplete="off" name="Url" type="text" class="form-control" id="Url" placeholder="Link" required>
+                            <input autocomplete="off" name="Url" type="text" class="form-control" id="Url" placeholder="Link" socialrequired>
                             <label for="floatingInput">Link</label>
                         </div>
                         <div class="mb-3">
