--- a/MyBlog.UI/Areas/Admin/Views/About/About.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/About/About.cshtml
@@ -19,19 +19,19 @@
         <form>
 
             <div class="form-floating mb-3">
-                <input name="NameSurname" type="text" class="form-control" id="NameSurname" placeholder="Ad Soyad" value="@Model.Data.NameSurname" required>
+                <input name="NameSurname" type="text" class="form-control" id="NameSurname" placeholder="Ad Soyad" value="@Model.Data.NameSurname" Aboutrequired>
                 <label for="floatingInput">Ad Soyad</label>
             </div>
             <div class="form-floating mb-3">
-                <input name="BirthDate" type="date" class="form-control" id="BirthDate" placeholder="Doğum Tarihi" value="@formattedDate" required>
+                <input name="BirthDate" type="date" class="form-control" id="BirthDate" placeholder="Doğum Tarihi" value="@formattedDate" Aboutrequired>
                 <label for="floatingPassword">Doğum Tarihi</label>
             </div>
             <div class="form-floating mb-3">
-                <input name="Job" type="text" class="form-control" id="Job" placeholder="Front-end-Back-end" value="@Model.Data.Job" required>
+                <input name="Job" type="text" class="form-control" id="Job" placeholder="Front-end-Back-end" value="@Model.Data.Job" Aboutrequired>
                 <label for="floatingInput">Alan(ör: Back-end - Front-end)</label>
             </div>
             <div class="form-floating mb-3">
-                <input name="Mail" type="email" class="form-control" id="Mail12" placeholder="Mail" value="@Model.Data.Mail" required>
+                <input name="Mail" type="email" class="form-control" id="Mail12" placeholder="Mail" value="@Model.Data.Mail" Aboutrequired>
                 <label for="floatingInput">Mail Adresi</label>
             </div>
             <div class="mb-3">
@@ -39,7 +39,7 @@
                 <input name="Photo" class="form-control bg-dark" id="FormFile" type="file" value="@Model.Data.Photo">
             </div>
             <div class="form-floating">
-                <textarea name="Resume" class="form-control" placeholder="Kendini burda tanıt" id="Resume" style="height: 150px;" required>@Model.Data.Resume</textarea>
+                <textarea name="Resume" class="form-control" placeholder="Kendini burda tanıt" id="Resume" style="height: 150px;" Aboutrequired>@Model.Data.Resume</textarea>
                 <label for="floatingTextarea">Özgeçmiş</label>
             </div>
             @* @if (!string.IsNullOrEmpty(ViewBag.Success))
@@ -68,7 +68,7 @@
         e.preventDefault();
 
         var formValid = true;
-        $("form input[required], form textarea[required]").each(function () {
+        $("form input[Aboutrequired], form textarea[Aboutrequired]").each(function () {
             if (!$(this).val()) {
                 formValid = false;
                 $(this).addClass("is-invalid");
